# efnlp

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile.pybeam  README.md  cloudbuild.yaml  docker-compose.yaml  efnlp.py  example.ipynb  justfile  pyproject.toml  sample-results.txt
beam/: .gitignore
beam/enwiki20201020/: Dockerfile  charcount.go  charcount.py  go.mod  go.sum  main.go  parse_enwiki.py  parse_tokenized_gpt2.py  tokenize_enwiki.py
beam/openwebtext/: charcount.py  manifest
beam/shakespeare/: parseshakes.py  splitshakes.py
cpp/: .gitignore  CMakeLists.txt  efnlp  efnlp.hpp  fakespeare.sh  justfile  language.json  main.cpp  model.json  sample-10-10k.txt  sample.txt
cpp/proto/: buf.yaml  efnlp.proto  service.proto
cpp/results/: 1.txt  12.txt  15.txt  2.txt  20.txt  3.txt  4.txt  5.txt  7.txt  console-output.txt
data/: .gitignore  README.md
deploy/: .gitignore  ecr.tf  ecs.tf  iam.tf  justfile  lb.tf  net.tf  outputs.tf  providers.tf  s3.tf  variables.tf
docker/: Dockerfile.justbeam  Dockerfile.pybeam  Dockerfile.pybeam2stage
efnlp/: __init__.py  __main__.py  beam.py  encoder.py  language.py  sampler.py  suffixtree.py  types.py  util.py
go/: .gitignore  Dockerfile  README.md  buf.gen.yaml  client.go  console-output.txt  datastructures.go  docker-compose.yaml  fakespeare.sh  generation_test.go  go.mod  go.sum  health.go  justfile  language_test.go  main.go  parsing_test.go  proto  server.go  service.go  util.go
paper/: Untitled.tex
proto/: efnlp.proto  service.proto
results/: 1.txt  10-gpt2.txt  10.txt  12.txt  15.txt  2-gpt2.txt  2.txt  20.txt  3.txt  30.txt  4.txt  5-gpt2.txt  5.txt  7.txt  console-output.txt  nanoGPT-10.txt  nanoGPT-default.txt
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: fakespeare.sh
src/: compress.rs  efnlp.v1alpha1.rs  errors.rs  language.rs  lib.rs  sampler.rs  suffixtree.rs  suffixtreeset.rs  types.rs
test/unit/: conftest.py  test_beam_parsing.py  test_encoders.py  test_language.py  test_parsing.py  test_sampler.py  test_split_parsing.py
test/unit/data/: README.md  gpt-2.json  owt.json  wiki.json
