[package]
name = "efnlp"
version = "0.1.0"
authors = ["morrowwr@gmail.com"]
edition = "2021"

[dependencies]
serde_json = "1.0.59"
rand = "0.8"
serde_derive = "1.0.152"
serde = "1.0.152"
bytes = "1.4.0"
prost = { version = ">=0.11.0, <0.11.2" }
prost-build = { version = ">=0.11.0, <0.11.2" }
pyo3 = "0.18.0"
protoc-gen-prost = "0.2.1"
flate2 = "1.0.25"

# { version = "0.18.0", features = ["extension-module"] }

[build-dependencies]
prost-build = { version = ">=0.11.0, <0.11.2" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "_efnlp"
crate-type = ["cdylib", "rlib"]
