[package]
name = "efnlp"
version = "0.1.0"
authors = ["morrowwr@gmail.com"]
edition = "2021"

[dependencies]
serde_json = "1.0.59"
rand = "0.8"
serde_derive = "1.0.152"
serde = "1.0.152"
pyo3 = { version = "0.18.0", features = ["extension-module"] }

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "EFNLP"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]
